# Interpreter

./: .gitignore  CMakeLists.txt
commands/: cmd.txt
config/: config.xml  config.xsd
inc/: AbstractMobileObj.hh  AbstractScene.hh  ComChannel.hh  Configuration.hh  Cuboid.hh  LibInterface.hh  PluginManager.hh  ProgramInterpreter.hh  Scene.hh  Sender.hh  Set4LibInterfaces.hh  Vector3D.hh  geomVector.hh  xmlinterp.hh
plugin/: CMakeLists.txt
plugin/inc/: Interp4Color.hh  Interp4Move.hh  Interp4Pause.hh  Interp4Rotate.hh  Interp4Scale.hh  Interp4Set.hh
plugin/src/: Interp4Color.cpp  Interp4Move.cpp  Interp4Pause.cpp  Interp4Rotate.cpp  Interp4Scale.cpp  Interp4Set.cpp
src/: ComChannel.cpp  Configuration.cpp  Cuboid.cpp  LibInterface.cpp  PluginManager.cpp  ProgramInterpreter.cpp  Scene.cpp  Sender.cpp  Set4LibInterfaces.cpp  main.cpp  xmlinterp.cpp
